fix webmenu button switcher position on mobile devices

--- a/css/web-menu.css
+++ b/css/web-menu.css
@@ -1,9 +1,9 @@
 #web-menu {
-	position: absolute;
+	position: fixed;
 	top: 0;
 	left: 0;
-	width: 100vw;
-	height: 100vh;
+	width: 100%;
+	height: 100%;
 	margin: 0;
 	background: var(--base-bg);
 	overflow: hidden;
